--- a/src/features/auth/login/login.css
+++ b/src/features/auth/login/login.css
@@ -1,24 +1,9 @@
-.login {
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0px 1px 6px 5px #dbdadaf3;
-  padding: 4rem 8rem;
-  background-color: var(--secondary-bg-color);
-  min-width: 30dvw;
-  border-radius: 0 0 2rem 2rem;
-}
-
 .login__heading-text {
   text-align: center;
 }
 
 /* FORM CONTAINER */
-.login__form-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
+.login__form-container,
 .login__form-container-input {
   display: flex;
   flex-direction: column;
